PR17910 sym string offset check

As far as I can see the only place that sets obj_coff_strings without
setting obj_coff_strings_len is pe_ILF_build_a_bfd.  Fix that and we
can simplify the sym string offset check.  This is just a tidy.
pe_ILF_build_a_bfd doesn't create bad symbols and
_bfd_coff_read_string_table will always result in non-zero
obj_coff_strings_len when obj_coff_strings is non-NULL.

	PR 17910
	* coffgen.c (_bfd_coff_internal_syment_name): Always sanity
	check sym string offset.
	* peicode.h (pe_ILF_build_a_bfd): Set obj_coff_strings_len.